syntax = "proto3";

package user;

import "user-model.proto";

service UserService {
  rpc InsertOne(User) returns (PublicUserData) {}
}